--- a/about.yml
+++ b/about.yml
@@ -1,1 +1,14 @@
+name: Alexandra Kuleshova # ваше имя
+job: QA Engineer
+level: junior
+email: alexandria393@gmail.com
+description: |
+  Это текст-описание в свободной форме. Здесь можно рассказать пару интересных фактов про себя
 
+  Текст может быть написан в несколько абзацев
+skills: # список навыков в виде списка, напишите что-то свое
+  - функциональное тестирование
+  - написание багрепортов
+  - Linux
+  - слепая печать
+  - английский язык C1
